tests/ui/closures/hrtb-closure-in-recursive-enum-type-error.stderr
error[E0282]: type annotations needed for `Expr<'_, _>`
  --> $DIR/hrtb-closure-in-recursive-enum-type-error.rs:19:15
   |
LL |     let ex = |x| {
   |               ^
   |
help: consider giving this closure parameter an explicit type, where the type for type parameter `VAR` is specified
   |
LL |     let ex = |x: Expr<'_, VAR>| {
   |                +++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
